SUBDIRS = src tests
dist_doc_DATA = README
nodist_include_HEADERS  = src/comio.$(FC_MODEXT) src/comio_class.$(FC_MODEXT)
nodist_include_HEADERS += src/io_prec.$(FC_MODEXT) src/io_utils.$(FC_MODEXT) src/ioerr_class.$(FC_MODEXT)
nodist_include_HEADERS += src/hdf_class.$(FC_MODEXT) src/pnc_class.$(FC_MODEXT)
bin_SCRIPTS = utils/comio-config

ACLOCAL_AMFLAGS = -I m4
